<resources>
    <string name="app_name">iCabit</string>
    <string name="minibus_amp_coach_job_pool"><![CDATA[Minibus & Coach Job Pool]]></string>
    <string name="welcome_back">Welcome Back</string>
    <string name="please_login_to_your_account">Please login to your account</string>
    <string name="john_doe">John Doe</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="info_example_com">info@example.com</string>
    <string name="user_name">User name</string>
    <string name="change_password">Change Password</string>
    <string name="my_journeys">My Journeys</string>
    <string name="job_complete">Job Complete</string>
    <string name="lost_jobs">Lost Jobs</string>
    <string name="job_cancellation">Job cancellation</string>
    <string name="settings">Settings</string>
    <string name="menubar">menubar</string>
    <string name="open">isDrawerOpen</string>
    <string name="close">DrawerClose</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">LogOut</string>
    <string name="create_account">Create Account</string>
    <string name="please_enter_required_information">Please enter required information</string>
    <string name="company_name">Company Name</string>
    <string name="pco_psv_licence_no">PCO/PSV Licence no</string>
    <string name="_44_000_000_0000">+44 000 000 0000</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="company">Company</string>
    <string name="driver">Driver</string>
    <string name="set_password">Set Password</string>
    <string name="please_enter_your_password">Please enter your Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">sign up</string>
    <string name="by_signing_up_your_accept_terms_of_services_and_privacy_policy">By Signing Up Your Accept Terms of Services and Privacy Policy</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign Up</string>
    <string name="enter_your_phone">Enter Your Phone</string>
    <string name="enter_username_or_email">Enter Username Or Email</string>
    <string name="welcome_to_dashboard">Welcome To Dashboard</string>
    <string name="view_history">View History</string>
    <string name="yesterday_s_jobs">Yesterday\'s Jobs</string>
    <string name="today_s_job">Today\'s Job</string>
    <string name="total_jobs_toaday">Total Jobs Toaday</string>
    <string name="today_cash_recieved">Total Cash Recieved</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="total_jobs_yesterday">Total Jobs Yesterday</string>
    <string name="time">Time</string>
    <string name="name">Name</string>
    <string name="wating_time">Waiting Time:</string>
    <string name="recieved">Received :</string>
    <string name="due">Due :</string>
    <string name="recieve_cash">Receive Cash</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="add_waiting_time">Add Waiting Time</string>
    <string name="shift_end">Shift End</string>
    <string name="select_time">Select Time</string>
    <string name="total_time">Total Time</string>
    <string name="_00_00">00:00</string>
    <string name="add_extra_shift">Add Extra Shift</string>
    <string name="today_miles">Today Miles</string>
    <string name="enter_miles">Enter mile</string>
    <string name="total_fuel_cost_for_today">Total fuel cost today</string>
    <string name="enter_fule_cost">Enter Fule Cost</string>
    <string name="link_file">Link File</string>
    <string name="add">Add</string>
    <string name="select">Select</string>
    <string name="enter_cost">enter Cost</string>
    <string name="parking_cost">Parking cost</string>


</resources>