<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"

        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/please_login_to_your_account"
            android:textColor="@color/text_color"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="35dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/primary_color"
            android:textColorHint="@color/text_color"
            app:boxBackgroundMode="outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username_or_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/username"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:inputType="textEmailAddress">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            app:boxStrokeColor="@color/primary_color"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            android:textColorHint="@color/text_color"
            android:layout_marginVertical="15dp"
            android:hint="@string/enter_your_password">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:inputType="numberPassword">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textAlignment="viewEnd"
            android:textColor="#FC4D3F" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@drawable/primary_btn"
            android:paddingVertical="20dp"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:id="@+id/signUpSpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/text_color"
        android:textSize="16sp" />


</LinearLayout>