<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CompanyFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="35dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/company_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/primary_color"
            android:textColorHint="@color/text_color"
            app:boxBackgroundMode="outline"
            android:layout_marginVertical="10dp"
            android:hint="@string/company_name">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/companey_name"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/licence_no"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/primary_color"
            android:textColorHint="@color/text_color"
            app:boxBackgroundMode="outline"
            android:layout_marginVertical="10dp"
            android:hint="@string/pco_psv_licence_no">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/licence_no"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/primary_color"
            android:textColorHint="@color/text_color"
            app:boxBackgroundMode="outline"
            android:layout_marginVertical="10dp"
            android:hint="@string/enter_your_phone">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/phone"
                android:textColor="@color/black"
                android:drawablePadding="10dp"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/primary_color"
            android:textColorHint="@color/text_color"
            app:boxBackgroundMode="outline"
            android:layout_marginVertical="10dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/mail"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:boxStrokeColor="@color/primary_color"
            android:textColorHint="@color/text_color"
            app:boxBackgroundMode="outline"
            android:hint="@string/new_password">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:inputType="numberPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:boxStrokeColor="@color/primary_color"
            android:textColorHint="@color/text_color"
            app:boxBackgroundMode="outline"
            android:hint="@string/confirm_password">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:inputType="numberPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:background="@drawable/primary_btn"
            android:paddingVertical="20dp"
            android:text="@string/next"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>
    </ScrollView>

</FrameLayout>