<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.DriverFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="35dp">



        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:boxStrokeColor="@color/primary_color"
            android:textColorHint="@color/text_color"
            app:boxBackgroundMode="outline"
            android:hint="@string/pco_psv_licence_no">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/licence_no"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:boxStrokeColor="@color/primary_color"
            android:textColorHint="@color/text_color"
            app:boxBackgroundMode="outline"
            android:hint="@string/_44_000_000_0000">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/phone"
                android:textColor="@color/black"
                android:drawablePadding="10dp"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:boxStrokeColor="@color/primary_color"
            android:textColorHint="@color/text_color"
            app:boxBackgroundMode="outline"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/mail"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:background="@drawable/primary_btn"
            android:paddingVertical="20dp"
            android:text="@string/next"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

</FrameLayout>